Overall, midPoint 4.9 is a major step from the past into the future.
</p>
{% endcapture %}
{% include release-dedication.html content=dedicationContent %}
++++

== Changes with Respect To Version 4.9

* Update GUI views after changing of the archetype, that is used in the view. See bug:MID-9776[].

== Changes With Respect To Version 4.8

=== New Features and Major Improvements

* xrefv:/midpoint/reference/support-4.9/resources/attribute-caching/[Shadow caching] was significantly improved and is now a regular midPoint feature.
** Shadow caching is enabled by default on new deployments and needs to be explicitly enabled on existing ones.
* Native Repository Support for `searchContainersIteratively` for all container types
** Removed upper record limit for reports for assignments, certification cases, certification work items and others.
** Changed transaction isolation from READ_COMMITED to REPEATABLE_READ.
** Changed storage strategy for complex container types - actual data stored inside their own table instead of parent object JSON.
* Added support for external data in protected strings, that can be resolved via secrets providers.
This allows to store secrets in external systems, such as HashiCorp Vault, AWS Secrets Manager, Azure Key Vault, etc.
For more information see xrefv:/midpoint/reference/support-4.9/security/credentials/secrets-provider-configuration.adoc[].
** Adding support for GUI of passwords in connector configuration and password of focus (visible only when it is configured in xml)
* Improvements regarding xrefv:/midpoint/reference/support-4.9/resources/entitlements/[shadow associations]:
** Support for native object references in ConnId (1.6.0.0-RC1).
** A new style of configuring simulated object references (via capabilities).
** A new style of configuring associations handling: mapping from associations to assignments using specific correlation and synchronization rules.