@@ -38,6 +38,7 @@ Overall, midPoint 4.9 is a major step from the past into the future.
 == Changes with Respect To Version 4.9
 
 * Update GUI views after changing of the archetype, that is used in the view. See bug:MID-9776[].
+* Adding support for PKCE (Proof Key for Code Exchange) as additional security for OIDC authentication module. See bug:MID-10155[].
 
 == Changes With Respect To Version 4.8
 
